apps/base/openmetadata/openmetadata.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openmetadata
  labels:
    toolkit.fluxcd.io/tenant: kog-team
