apps/base/openmetadata/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openmetadata-ingress
  namespace: openmetadata
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metadata.local.reinthal.cc`)
      kind: Rule
      middlewares:
        -   name: default-headers
            namespace: openmetadata
      services:
        - name: weave-gitops
          port: TODO
  tls:
    secretName: local-reinthal-cc-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: openmetadata
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
